# Verse-conf

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
compare/: Cargo.toml  comparison_plan.md  generate_charts.py  performance_charts.md
compare/src/: lib.rs
compare/tests/: comparison_tests.rs
crates/verseconf-cli/: Cargo.toml
crates/verseconf-cli/src/: main.rs  output.rs
crates/verseconf-cli/src/commands/: audit.rs  diff.rs  doc.rs  env.rs  format.rs  mod.rs  parse.rs  template.rs  validate.rs  version.rs
crates/verseconf-core/: Cargo.toml
crates/verseconf-core/src/: error.rs  lib.rs  source.rs
crates/verseconf-core/src/ast/: metadata.rs  mod.rs  node.rs  span.rs  value.rs
crates/verseconf-core/src/engine/: audit.rs  cache.rs  diff.rs  diff_comparator.rs  diff_formatter.rs  hot_reload.rs  merger.rs  mod.rs  multi_env.rs  perf_cache.rs  pretty_printer.rs  reporter.rs  template.rs  template_enhanced.rs  template_renderer.rs  version_manager.rs
crates/verseconf-core/src/lexer/: context.rs  error.rs  mod.rs  token.rs
crates/verseconf-core/src/parser/: builder.rs  config.rs  error.rs  mod.rs
crates/verseconf-core/src/semantic/: advanced_rules.rs  env_interp.rs  mod.rs  schema_validator.rs  validator.rs
crates/verseconf-lsp/: Cargo.toml
crates/verseconf-lsp/src/: lib.rs  main.rs  server.rs
crates/verseconf-test/: Cargo.toml
crates/verseconf-test/benches/: performance.rs
crates/verseconf-test/src/: lib.rs
crates/verseconf-test/tests/: advanced_validation_tests.rs  cli_validate.rs  diff_tests.rs  parser_tests.rs  performance_tests.rs  template_tests.rs
dev/: PROJECT_STATUS.md  TECHNICAL_PLAN.md  comparison_report.md
docs/: SPECIFICATION.md  TUTORIAL.md
examples/: base.vcf  basic.vcf  comprehensive.vcf  development.vcf  production.vcf  server_template.vcf.tpl  with_include.vcf  with_metadata.vcf  with_schema.vcf
extensions/verseconf-vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
extensions/verseconf-vscode/src/: extension.ts
extensions/verseconf-vscode/syntaxes/: verseconf.tmLanguage.json
integrations/verseconf-wasm/: Cargo.toml  test.html
integrations/verseconf-wasm/go/: go.mod
integrations/verseconf-wasm/go/cmd/test/: main.go
integrations/verseconf-wasm/go/lib/: verseconf.go
integrations/verseconf-wasm/java/: pom.xml
integrations/verseconf-wasm/java/src/main/java/com/verseconf/: VerseConf.java  VerseConfTest.java  VerseConfWasmTest.java
integrations/verseconf-wasm/js-api/: .npmignore  index.d.ts  package-lock.json  package.json
integrations/verseconf-wasm/js-api/src/: index.ts
integrations/verseconf-wasm/python/: pyproject.toml
integrations/verseconf-wasm/python/verseconf/: __init__.py
integrations/verseconf-wasm/ruby/: verseconf.gemspec
integrations/verseconf-wasm/ruby/lib/: verseconf.rb
integrations/verseconf-wasm/src/: lib.rs
