[workspace]
members = [
    "crates/verseconf-core",
    "crates/verseconf-cli",
    "crates/verseconf-test",
    "crates/verseconf-lsp",
    "compare",
    "integrations/verseconf-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VerseConf Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/verseconf"
description = "A modern configuration language implementation in Rust based on VerseConf v1.1 spec"

[workspace.dependencies]
# Core dependencies
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
regex = "1.10"
atty = "0.2"
toml = "0.8"
serde_json = "1.0"
notify = "6.1"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Dev dependencies
rstest = "0.18"
criterion = "0.5"
insta = "1.34"
