[package]
name = "verseconf-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Test suite for VerseConf configuration language"

[dependencies]
verseconf-core = { path = "../verseconf-core" }
toml.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
rstest.workspace = true
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "performance"
harness = false

[[bin]]
name = "compare-formats"
path = "src/bin/compare_formats.rs"
