[package]
name = "verseconf-wasm"
version = "0.1.0"
edition = "2021"
authors = ["VerseConf Team"]
description = "WebAssembly bindings for VerseConf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Baixu22/Verse-conf"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3", features = ["console"] }
verseconf-core = { path = "../../crates/verseconf-core" }

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
